# internal/modules/auth/routes.go
@@ -6,5 +6,6 @@ func RegisterRoutes(r chi.Router, h *Handler) {
 	r.Route("/auth", func(r chi.Router) {
 		r.Post("/login", h.Login)
 		r.Post("/signup", h.SignUp)
+		r.Post("/refresh-token", h.RefreshToken)
 	})
 }
